; ModuleID = '/home/carl/AnghaBench/FFmpeg/libavcodec/extr_mediacodec_wrapper.c_ff_AMediaCodec_getName.c'
source_filename = "/home/carl/AnghaBench/FFmpeg/libavcodec/extr_mediacodec_wrapper.c_ff_AMediaCodec_getName.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_15__ = type { %struct.TYPE_13__, i32 }
%struct.TYPE_13__ = type { i32 }
%struct.TYPE_14__ = type { i32 (%struct.TYPE_14__**, i32*)*, i32* (%struct.TYPE_14__**, i32, i32)* }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i8* @ff_AMediaCodec_getName(%struct.TYPE_15__* %0) #0 {
  %2 = alloca %struct.TYPE_15__*, align 8
  %3 = alloca i8*, align 8
  %4 = alloca %struct.TYPE_14__**, align 8
  %5 = alloca i32*, align 8
  store %struct.TYPE_15__* %0, %struct.TYPE_15__** %2, align 8
  store i8* null, i8** %3, align 8
  store %struct.TYPE_14__** null, %struct.TYPE_14__*** %4, align 8
  store i32* null, i32** %5, align 8
  %6 = load %struct.TYPE_14__**, %struct.TYPE_14__*** %4, align 8
  %7 = load %struct.TYPE_15__*, %struct.TYPE_15__** %2, align 8
  %8 = call i32 @JNI_GET_ENV_OR_RETURN(%struct.TYPE_14__** %6, %struct.TYPE_15__* %7, i32* null)
  %9 = load %struct.TYPE_14__**, %struct.TYPE_14__*** %4, align 8
  %10 = load %struct.TYPE_14__*, %struct.TYPE_14__** %9, align 8
  %11 = getelementptr inbounds %struct.TYPE_14__, %struct.TYPE_14__* %10, i32 0, i32 1
  %12 = load i32* (%struct.TYPE_14__**, i32, i32)*, i32* (%struct.TYPE_14__**, i32, i32)** %11, align 8
  %13 = load %struct.TYPE_14__**, %struct.TYPE_14__*** %4, align 8
  %14 = load %struct.TYPE_15__*, %struct.TYPE_15__** %2, align 8
  %15 = getelementptr inbounds %struct.TYPE_15__, %struct.TYPE_15__* %14, i32 0, i32 1
  %16 = load i32, i32* %15, align 4
  %17 = load %struct.TYPE_15__*, %struct.TYPE_15__** %2, align 8
  %18 = getelementptr inbounds %struct.TYPE_15__, %struct.TYPE_15__* %17, i32 0, i32 0
  %19 = getelementptr inbounds %struct.TYPE_13__, %struct.TYPE_13__* %18, i32 0, i32 0
  %20 = load i32, i32* %19, align 4
  %21 = call i32* %12(%struct.TYPE_14__** %13, i32 %16, i32 %20)
  store i32* %21, i32** %5, align 8
  %22 = load %struct.TYPE_14__**, %struct.TYPE_14__*** %4, align 8
  %23 = load %struct.TYPE_15__*, %struct.TYPE_15__** %2, align 8
  %24 = call i64 @ff_jni_exception_check(%struct.TYPE_14__** %22, i32 1, %struct.TYPE_15__* %23)
  %25 = icmp slt i64 %24, 0
  br i1 %25, label %26, label %27

26:                                               ; preds = %1
  br label %32

27:                                               ; preds = %1
  %28 = load %struct.TYPE_14__**, %struct.TYPE_14__*** %4, align 8
  %29 = load i32*, i32** %5, align 8
  %30 = load %struct.TYPE_15__*, %struct.TYPE_15__** %2, align 8
  %31 = call i8* @ff_jni_jstring_to_utf_chars(%struct.TYPE_14__** %28, i32* %29, %struct.TYPE_15__* %30)
  store i8* %31, i8** %3, align 8
  br label %32

32:                                               ; preds = %27, %26
  %33 = load i32*, i32** %5, align 8
  %34 = icmp ne i32* %33, null
  br i1 %34, label %35, label %43

35:                                               ; preds = %32
  %36 = load %struct.TYPE_14__**, %struct.TYPE_14__*** %4, align 8
  %37 = load %struct.TYPE_14__*, %struct.TYPE_14__** %36, align 8
  %38 = getelementptr inbounds %struct.TYPE_14__, %struct.TYPE_14__* %37, i32 0, i32 0
  %39 = load i32 (%struct.TYPE_14__**, i32*)*, i32 (%struct.TYPE_14__**, i32*)** %38, align 8
  %40 = load %struct.TYPE_14__**, %struct.TYPE_14__*** %4, align 8
  %41 = load i32*, i32** %5, align 8
  %42 = call i32 %39(%struct.TYPE_14__** %40, i32* %41)
  br label %43

43:                                               ; preds = %35, %32
  %44 = load i8*, i8** %3, align 8
  ret i8* %44
}

declare dso_local i32 @JNI_GET_ENV_OR_RETURN(%struct.TYPE_14__**, %struct.TYPE_15__*, i32*) #1

declare dso_local i64 @ff_jni_exception_check(%struct.TYPE_14__**, i32, %struct.TYPE_15__*) #1

declare dso_local i8* @ff_jni_jstring_to_utf_chars(%struct.TYPE_14__**, i32*, %struct.TYPE_15__*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
